<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/imageHeight"
            android:layout_marginTop="@dimen/margin24dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pichu"
                android:layout_width="@dimen/widthLinearLayoutChild"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin24dp"
                android:layout_marginRight="@dimen/margin24dp"
                android:layout_weight="1"
                android:src="@drawable/togepy" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <ImageView
                android:layout_width="@dimen/widthLinearLayoutChild"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin24dp"
                android:layout_marginRight="@dimen/margin24dp"
                android:layout_weight="1"
                android:src="@drawable/pichu" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="150dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/widthLinearLayoutChild"
                android:layout_height="@dimen/linearButtonsHeight"
                android:layout_marginLeft="@dimen/margin24dp"
                android:layout_marginRight="@dimen/margin24dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin16dp"
                    android:layout_marginTop="@dimen/margin16dp"

                    android:gravity="center"
                    android:padding="@dimen/togepiTextPadding"
                    android:text="@string/togepiText"
                    android:textColor="@color/colorTeamNameText"
                    android:textSize="@dimen/textSizeTeamName" />

                <TextView
                    android:id="@+id/team_togepi_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin24dp"

                    android:gravity="center"
                    android:padding="@dimen/togepiTextPadding"
                    android:text="@string/_0Text"
                    android:textColor="@color/scoreTextColor"
                    android:textSize="@dimen/sizeScoreText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin8dp"
                    android:onClick="subsMegaTogepi"
                    android:text="@string/megaPunchText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin8dp"
                    android:onClick="subsDizzyTogepi"
                    android:text="@string/dizzyPunchText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin8dp"
                    android:onClick="subsHitTogepi"
                    android:text="@string/doubleHitText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="subsRageTogepi"
                    android:text="@string/rageText" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="@dimen/widthLinearLayoutChild"
                android:layout_height="@dimen/linearButtonsHeight"
                android:layout_marginLeft="@dimen/margin24dp"
                android:layout_marginRight="@dimen/margin24dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin16dp"
                    android:layout_marginTop="@dimen/margin16dp"

                    android:gravity="center"
                    android:padding="@dimen/togepiTextPadding"
                    android:text="@string/pichuText"
                    android:textColor="@color/colorTeamNameText"
                    android:textSize="@dimen/textSizeTeamName" />

                <TextView
                    android:id="@+id/team_pichu_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin24dp"

                    android:gravity="center"
                    android:padding="@dimen/togepiTextPadding"
                    android:text="@string/_0Text"
                    android:textColor="@color/scoreTextColor"
                    android:textSize="@dimen/sizeScoreText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin8dp"
                    android:onClick="subsMegaPichu"
                    android:text="@string/megaPunchText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin8dp"
                    android:onClick="subsDizzyPichu"
                    android:text="@string/dizzyPunchText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin8dp"
                    android:onClick="subsHitPichu"
                    android:text="@string/doubleHitText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="subsRagePichu"
                    android:text="@string/rageText" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin32dp"
            android:onClick="resetScores"
            android:text="@string/resetButton" />

    </RelativeLayout>
</ScrollView>